
- Modifying an empty deque during iteration now raises RuntimeError
  instead of StopIteration.

- Bug #1552726: fix polling at the interpreter prompt when certain
  versions of the readline library are in use.

- Bug #1633621: if curses.resizeterm() or curses.resize_term() is called,
  update _curses.LINES, _curses.COLS, curses.LINES and curses.COLS.

Library
-------

- Patch #685268: Consider a package's __path__ in imputil.

- Patch 1463026: Support default namespace in XMLGenerator.

- Patch 1571379: Make trace's --ignore-dir facility work in the face of
  relative directory names.

- Bug #1600860: Search for shared python library in LIBDIR, not lib/python/config,
  on "linux" and "gnu" systems.

- Bug #1124861: Automatically create pipes if GetStdHandle fails in
  subprocess. 

- Patch #783050: the pty.fork() function now closes the slave fd
  correctly.

- Patch #1638243: the compiler package is now able to correctly compile
  a with statement; previously, executing code containing a with statement
  compiled by the compiler package crashed the interpreter.

- Bug #1643943: Fix %U handling for time.strptime.

- Patch #1643874: memory leak in ctypes fixed.

- Bug #1598181: Avoid O(N**2) bottleneck in subprocess communicate(). 

- Patch #1627441: close sockets properly in urllib2.

- Bug #1610795: ctypes.util.find_library works now on BSD systems.

- Fix sort stability in heapq.nlargest() and nsmallest().

- Patch #1504073: Fix tarfile.open() for mode "r" with a fileobj argument.

- Patch #1262036: Prevent TarFiles from being added to themselves under
  certain conditions.

- Patch #1230446: tarfile.py: fix ExFileObject so that read() and tell()
  work correctly together with readline().

- Bug #737202: Make CGIHTTPServer work for scripts in subdirectories.
  Fix by Titus Brown.

- Patch #827559: Make SimpleHTTPServer redirect when a directory URL
  is missing the trailing slash, so that relative links work correctly.
  Patch by Chris Gonnerman.
